[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Objects/Circuit/PowerCircuit.png" type="Texture" id=1]
[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter I/PowerCircuit/PowerCircuit.gd" type="Script" id=3]

[node name="PowerCircuit" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.552941, 0.552941, 0.552941, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 16.1272
margin_top = 6.14378
margin_right = 199.127
margin_bottom = 20.1438
text = "Calculate Power on each Box"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 180.0
margin_top = 145.0
margin_right = 277.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="4"]
position = Vector2( 140.465, 114.451 )
scale = Vector2( 0.272988, 0.279093 )
texture = ExtResource( 1 )

[node name="PowerAtA" type="LineEdit" parent="." index="5"]
margin_left = 188.611
margin_top = 24.1935
margin_right = 246.611
margin_bottom = 48.1935
align = 1
placeholder_text = "Pa"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PowerAtB" type="LineEdit" parent="." index="6"]
margin_left = 248.627
margin_top = 24.3945
margin_right = 306.627
margin_bottom = 48.3945
align = 1
placeholder_text = "Pb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerAtC" type="LineEdit" parent="." index="7"]
margin_left = 189.134
margin_top = 50.3999
margin_right = 247.134
margin_bottom = 74.3999
align = 1
placeholder_text = "Pc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerAtD" type="LineEdit" parent="." index="8"]
margin_left = 248.694
margin_top = 49.5581
margin_right = 306.694
margin_bottom = 73.5581
align = 1
placeholder_text = "Pd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerAtE" type="LineEdit" parent="." index="9"]
margin_left = 220.379
margin_top = 77.3337
margin_right = 278.379
margin_bottom = 101.334
align = 1
placeholder_text = "Pe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerAtF" type="LineEdit" parent="." index="10"]
margin_left = 221.036
margin_top = 103.453
margin_right = 279.036
margin_bottom = 127.453
align = 1
placeholder_text = "Pf"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="PowerAtA" to="." method="_on_PowerAtA_text_entered"]
[connection signal="text_entered" from="PowerAtB" to="." method="_on_PowerAtB_text_entered"]
[connection signal="text_entered" from="PowerAtC" to="." method="_on_PowerAtC_text_entered"]
[connection signal="text_entered" from="PowerAtD" to="." method="_on_PowerAtD_text_entered"]
[connection signal="text_entered" from="PowerAtE" to="." method="_on_PowerAtE_text_entered"]
[connection signal="text_entered" from="PowerAtF" to="." method="_on_PowerAtF_text_entered"]
